# suffering

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: remote_pipeline_run.py  remote_run_nasdaq100_current_static_pipeline.py  remote_wsl_run.py  run_nasdaq100_current_static_pipeline.py
src/suffering/: __init__.py  cli.py
src/suffering/backtest/: __init__.py  benchmarks.py  metrics.py  portfolio.py  robustness.py  service.py  signals.py  storage.py
src/suffering/config/: __init__.py  settings.py
src/suffering/data/: __init__.py  models.py  service.py  storage.py  universe.py
src/suffering/features/: __init__.py  definitions.py  (+3 more)
tests/: test_backtest_benchmarks.py  test_backtest_portfolio.py  test_backtest_robustness.py  test_backtest_service.py  test_backtest_signals.py  test_backtest_storage.py  test_cli_backtest.py  test_cli_data.py  test_cli_ranking.py  test_cli_reports.py  test_cli_training.py  test_data_service.py  test_data_storage.py  test_feature_service.py  test_feature_storage.py  test_feature_transforms.py  test_nasdaq100_experiment.py  test_ranking_labels.py  test_ranking_panel.py  test_ranking_service.py  test_ranking_storage.py  test_remote_pipeline.py  test_remote_workflow.py  test_reports_markdown.py  test_reports_service.py  test_smoke.py  test_training_baseline.py  test_training_evaluate.py  test_training_models.py  test_training_prediction.py  test_training_ranking.py  test_training_service.py  test_training_splits.py  test_training_storage.py  test_training_walkforward.py  test_universe.py  test_yfinance_provider.py
(+25 files in other folders)
