[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suffering"
version = "0.1.0"
description = "A lightweight, iterative Python quant research project skeleton."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.1,<3.0",
    "yfinance>=0.2.54,<0.3",
]

[project.scripts]
suffering = "suffering.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/suffering"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
